[package]
name = "liblovense"
version = "0.1.0"
authors = ["Kyle Machulis <kyle@machul.is>"]
description = "Rust library for accessing Lovense Hardware (Max, Nora, Lush, Hush, etc...)"
license = "BSD-3-Clause"
homepage = "http://github.com/metafetish/liblovense-rs"
repository = "https://github.com/metafetish/liblovense-rs.git"
readme = "README.md"
keywords = ["usb", "hardware"]

[dependencies]
serial="0.3.4"
clap = {version = "2", features = ["yaml"]}
